Changelog
=========

1.0b9 - Unreleased
------------------

* Add workaround for issue with `SearchableText` criteria in topics.
  This fixes http://plone.org/products/collective.solr/issues/3
  [witsch]

* Add maintenance view for adding/syncing single indexes using already
  existing data from the portal catalog.
  [witsch]

* Fix hard-coded unique key in maintenance view.
  [witsch]


1.0b8 - Released May 4, 2009
----------------------------

* Fix indexing regarding Plone 3.3, `plone.indexer`_ & `PLIP 239`_.
  This fixes http://plone.org/products/collective.solr/issues/6
  [witsch]

  .. _`plone.indexer`: http://pypi.python.org/pypi/plone.indexer/
  .. _`PLIP 239`: http://plone.org/products/plone/roadmap/239 


1.0b7 - Released April 28, 2009
-------------------------------

* Fix unintended (de)activation of the Solr integration during profile
  (re)application.
  [witsch]

* Fix display of facet information with no active facets.
  [witsch]

* Register import and export steps using ZCML.
  [witsch]


1.0b6 - Released April 20, 2009
-------------------------------

* Add support for facetted searches.
  [witsch]

* Update code to comply to PEP8 style guide lines.
  [witsch]

* Expose additional information provided by Solr - for example about headers
  and search facets.
  [witsch]

* Handle edge cases like invalid range queries by quoting
  [tesdal]

* Parse and quote the query to filter invalid query syntax.
  [tesdal]

* In solrSearchResults, if the passed in request is a dict, look up 
  request to enable adaptation into PloneFlare.
  [tesdal]

* Added support for objects with a 'query' attribute as search values.
  [tmog]


1.0b5 - Released December 16, 2008
----------------------------------

* Fix and extend logging in "sync" maintenance view.
  [witsch]


1.0b4 - Released November 23, 2008
----------------------------------

* Filter control characters to prevent indexing errors.  This fixes
  http://plone.org/products/collective.solr/issues/1